--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "axios": "^0.26.0",
+    "classnames": "^2.3.2",
+    "jest": "^27.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.4.0",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
@@ -21,8 +24,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +47,7 @@
     ]
   },
   "devDependencies": {
-    "@types/bootstrap": "^5.1.9"
+    "@types/bootstrap": "^5.1.9",
+    "@types/jest": "^29.5.1"
   }
 }
