--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "jest --watchAll",
