Add Layout & Footer unit tests

--- a/package.json
+++ b/package.json
@@ -25,14 +25,19 @@
     "dev": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "jest --watchAll",
-    "coverage": "jest --coverage"
+    "test": "react-scripts test",
+    "coverage": "react-scripts test --coverage",
+    "cypress": "cypress open",
+    "cypress:headless": "cypress run"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+      "no-undef": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -48,6 +53,7 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.1.9",
-    "@types/jest": "^29.5.1"
+    "@types/jest": "^29.5.1",
+    "cypress": "^12.12.0"
   }
 }
