--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-bootstrap": "^2.2.0",
     "react-dom": "^17.0.2",
     "react-hot-toast": "^2.4.0",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-query": "^3.39.3",
     "react-rating": "^2.0.5",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
